FIX: local repo load failure